stateful tests generated

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ venv/
 nohup.out
 
 executions.json
+
+# Payloads generator
+engine-jwt/
+execution-data
+execution-spec-tests/
+mitm_config.json
+nethermind.log
