--- a/scripts/besu/docker-compose.yaml
+++ b/scripts/besu/docker-compose.yaml
@@ -22,7 +22,8 @@ services:
       - 8545
       - 8551
     command:
-      - --genesis-file=/tmp/chainspec/chainspec.json
+      - ${BESU_GENESIS_FLAG}
+      - ${BESU_NETWORK_FLAG}
       - --bonsai-historical-block-limit=10000
       - --bonsai-limit-trie-logs-enabled=false
       - --data-path=/var/lib/besu/data
