--- a/scripts/nethermind/docker-compose.yaml
+++ b/scripts/nethermind/docker-compose.yaml
@@ -25,8 +25,8 @@ services:
       - 8545
       - 8551
     command:
-      - --config=holesky
-      - --Init.ChainSpecPath=/tmp/chainspec/chainspec.json
+      - ${NETHERMIND_CONFIG_FLAG}
+      - ${NETHERMIND_GENESIS_FLAG}
       - --datadir=/nethermind/data
       - --log=INFO
       - --JsonRpc.Enabled=true
