--- a/scripts/nethermind/docker-compose.yaml
+++ b/scripts/nethermind/docker-compose.yaml
@@ -16,8 +16,6 @@ services:
       - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
       - ${CHAINSPEC_PATH}:/tmp/chainspec/chainspec.json
     ports:
-      - "30304:30304/tcp"
-      - "30304:30304/udp"
       - "8009:8009"
       - "8545:8545"
       - "8551:8551"
@@ -33,7 +31,9 @@ services:
       - --JsonRpc.JwtSecretFile=/tmp/jwt/jwtsecret
       - --JsonRpc.EngineHost=0.0.0.0
       - --JsonRpc.EnginePort=8551
-      - --Network.DiscoveryPort=30304
+      - --Network.DiscoveryPort=0
+      - --Network.MaxActivePeers=0
+      - --Discovery.Enabled=false
       - --HealthChecks.Enabled=true
       - --Metrics.Enabled=true
       - --Metrics.ExposePort=8008
@@ -62,3 +62,4 @@ services:
 networks:
   gas:
     name: gas-network
+    internal: true
