--- a/scripts/reth/docker-compose.yaml
+++ b/scripts/reth/docker-compose.yaml
@@ -28,8 +28,6 @@ services:
       - ${GENESIS_PATH}:/tmp/genesis/genesis.json
       - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
     ports:
-      - "30303:30303/tcp"
-      - "30303:30303/udp"
       - "8008:8008/tcp"
       - "8551:8551"
     expose:
@@ -51,6 +49,7 @@ services:
       - --authrpc.jwtsecret=/tmp/jwt/jwtsecret
       - --authrpc.addr=0.0.0.0
       - --authrpc.port=8551
+      - --p2p.disable
     logging:
       driver: json-file
       options:
@@ -71,3 +70,4 @@ services:
 networks:
   gas:
     name: gas-network
+    internal: true
