Use the full sync mode for ethrex so that it accepts engine api calls

--- a/scripts/ethrex/docker-compose.yaml
+++ b/scripts/ethrex/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
       - --http.addr=0.0.0.0
       - --http.port=8545
       - --authrpc.addr=0.0.0.0
+      - --syncmode=full
     logging:
       driver: json-file
       options:
