--- a/scripts/besu/docker-compose.yaml
+++ b/scripts/besu/docker-compose.yaml
@@ -43,6 +43,7 @@ services:
       - --p2p-enabled=false
       - --max-peers=0
       - --required-block=22923350=0x50acf6316948b24d94266a452d1856f7189f5b62a48c4b91c414ab1ef702d0c5
+      - --logging=TRACE
     logging:
       driver: json-file
       options:
