--- a/scripts/reth/docker-compose.yaml
+++ b/scripts/reth/docker-compose.yaml
@@ -1,17 +1,17 @@
 services:
-  execution-sync:
-    container_name: gas-execution-client-sync
-    image: ${EC_IMAGE_VERSION}
-    pull_policy: always
-    networks:
-      - gas
-    volumes:
-      - ${EC_DATA_DIR}:/var/lib/reth
-      - ${GENESIS_PATH}:/tmp/genesis/genesis.json
-    entrypoint:
-      - /bin/sh
-      - -c
-      - ${RETH_INIT_COMMAND}
+  #execution-sync:
+  #  container_name: gas-execution-client-sync
+  #  image: ${EC_IMAGE_VERSION}
+  #  pull_policy: always
+  #  networks:
+  #    - gas
+  #  volumes:
+  #    - ${EC_DATA_DIR}:/var/lib/reth
+  #    - ${GENESIS_PATH}:/tmp/genesis/genesis.json
+  #  entrypoint:
+  #    - /bin/sh
+  #    - -c
+  #    - ${RETH_INIT_COMMAND}
   execution:
     stop_grace_period: 30m
     container_name: gas-execution-client
