--- a/scripts/nimbus/docker-compose.yaml
+++ b/scripts/nimbus/docker-compose.yaml
@@ -41,6 +41,21 @@ services:
       options:
         max-size: 10m
         max-file: "10"
+    labels:
+      metrics_enabled: "true"
+      metrics_port: "8008"
+      logs_enabled: "false"
+      instance: "${GA_METRICS_LABELS_INSTANCE}"
+  alloy:
+    environment:
+      METRICS_LABELS_EXECUTION_CLIENT: "nimbus-el"
+    extends:
+      file: ../addons/alloy/compose.yaml
+      service: alloy
+  node-exporter:
+    extends:
+      file: ../addons/node-exporter/compose.yaml
+      service: node-exporter
 networks:
   gas:
     name: gas-network
