--- a/images.yaml
+++ b/images.yaml
@@ -1,8 +1,8 @@
 images:
-  nethermind: "ethpandaops/nethermind:performance"
-  geth: "ethpandaops/geth:performance"
-  reth: "ethpandaops/reth:performance"
-  erigon: "ethpandaops/erigon:performance"
-  besu: "ethpandaops/besu:performance"
-  nimbus: "statusim/nimbus-eth1:performance"
-  ethrex: "ghcr.io/lambdaclass/ethrex:performance"
+  nethermind: ethpandaops/nethermind:performance-57df2eb
+  geth: ethpandaops/geth:performance-98d653c
+  reth: ethpandaops/reth:performance-655aae4
+  erigon: ethpandaops/erigon:performance-135895f
+  besu: ethpandaops/besu:performance-9208e59
+  nimbus: statusim/nimbus-eth1:performance-6ce4568
+  ethrex: ghcr.io/lambdaclass/ethrex:performance
