--- a/scripts/reth/docker-compose.yaml
+++ b/scripts/reth/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
       - gas
     volumes:
       - ${EC_DATA_DIR}:/var/lib/reth
-      #- ${GENESIS_PATH}:/tmp/genesis/genesis.json
+      - ${GENESIS_PATH}:/tmp/genesis/genesis.json
       - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
     ports:
       - "8008:8008/tcp"
