--- a/scripts/geth/docker-compose.yaml
+++ b/scripts/geth/docker-compose.yaml
@@ -36,6 +36,7 @@ services:
       - 8546
       - 8551
     command:
+      - --syncmode=full
       - --nat=none
       - --http
       - --http.addr=0.0.0.0
