--- a/scripts/erigon/docker-compose.yaml
+++ b/scripts/erigon/docker-compose.yaml
@@ -34,7 +34,8 @@ services:
       - "8551:8551"
       - "8545:8545"
     command:
-      - ${ERIGON_CHAIN_FLAG}
+      - node
+      - ${ERIGON_CHAIN_FLAG:---chain=/tmp/genesis/genesis.json}
       - --externalcl
       - --private.api.addr=0.0.0.0:9090
       - --nat=any
