--- a/scripts/nimbus/docker-compose.yaml
+++ b/scripts/nimbus/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     networks:
       - gas
     volumes:
-      - ${EC_DATA_DIR}:/var/lib/nimbus/data
+      - execution_data:/var/lib/nimbus/data
       - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
       - ${GENESIS_PATH}:/tmp/genesis/genesis.json
     user: root
@@ -42,3 +42,11 @@ services:
 networks:
   gas:
     name: gas-network
+volumes:
+  execution_data:
+    name: ${EC_VOLUME_NAME}
+    driver: local
+    driver_opts:
+      type: none
+      o: bind,rw,dirsync,noatime
+      device: ${EC_DATA_DIR}
