--- a/images.yaml
+++ b/images.yaml
@@ -1,8 +1,3 @@
 images:
-  nethermind: ethpandaops/nethermind:performance
-  geth: ethpandaops/geth:performance
-  reth: ethpandaops/reth:performance
-  erigon: ethpandaops/erigon:performance
-  besu: ethpandaops/besu:performance
-  nimbus: statusim/nimbus-eth1:performance
-  ethrex: ghcr.io/lambdaclass/ethrex:performance
+  nethermind: ethpandaops/nethermind:eip-7904
+  geth: ethpandaops/geth:MariusVanDerWijden-eip-7904
