Add git lfs pull before regenerating warmup tests

--- a/.github/workflows/update-warmup-tests.yml
+++ b/.github/workflows/update-warmup-tests.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Regenerate warmup tests
         run: |
+          git lfs pull
           python3 make_warmup_tests.py -s eest_tests/ -d warmup-tests -g scripts/genesisfiles/geth/zkevmgenesis.json
 
       - name: Detect repository changes
