Used plain bash instead of make command on CI

--- a/.github/actions/gas-benchmark-action/action.yml
+++ b/.github/actions/gas-benchmark-action/action.yml
@@ -93,7 +93,16 @@ runs:
       working-directory: ${{ github.action_path }}/../../..
       run: |
         set -euo pipefail
-        make prepare_tools
+        if [ ! -d nethermind ]; then
+          git clone https://github.com/NethermindEth/nethermind nethermind
+          (cd nethermind && git lfs pull || true)
+        fi
+
+        cd nethermind
+        git checkout e1857d7ca6613ccdc40973899290f565f367e235
+        cd ..
+
+        dotnet build ./nethermind/tools/Nethermind.Tools.Kute -c Release --property WarningLevel=0
 
     - name: Ensure results directory exists
       shell: bash
