Fixed nethermind docker run

--- a/scripts/nethermind/docker-compose.yaml
+++ b/scripts/nethermind/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
       - execution_data:/nethermind/data
       - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
       - ${CHAINSPEC_PATH}:/tmp/chainspec/chainspec.json
-      - /home/ubuntu/diagfiles:/nethermind/diag
+      - ./diagfiles:/nethermind/diag
     ports:
       - "8009:8009"
       - "8545:8545"
